--- a/balanced_smileys.sample
+++ b/balanced_smileys.sample
@@ -1,13 +1,6 @@
-10
-:(( asdsad :)) aas :))
-(foo:))
-((()):)
+5
 :((
 i am sick today (:()
 (:)
-((:hacker cup): (started (:))))
+hacker cup: started :):)
 )(
-:) :()
-lklkjlkjlkj
-:(khjkh:))
-
